# Django_Study

./: README.md  pyproject.toml
config/: settings.py
house/: admin.py  models.py
house/migrations/: 0001_initial.py  0002_house_pet_allowed.py  0002_initial.py  0003_rename_adress_house_address.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
