[tool.poetry]
name = "django-study"
version = "0.1.0"
description = ""
authors = ["JaeHyeon-Park"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.7.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
